fixed z-index error

--- a/navbar.css
+++ b/navbar.css
@@ -4,6 +4,7 @@
     width: 5rem;
     height: 100vh;
     transition: width 600ms ease;
+    z-index: 1;
 }
 
 .navbar-nav {
